--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
+    "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-redux": "^9.2.0"
+    "react-redux": "^9.2.0",
+    "swiper": "^12.0.3"
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "15.5.9",
