--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "clsx": "2.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.562.0",
     "next": "15.5.9",
     "next-themes": "0.4.6",
@@ -37,6 +38,7 @@
     "@next/eslint-plugin-next": "15.5.9",
     "@react-types/shared": "3.32.1",
     "@tailwindcss/postcss": "4.1.11",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "20.5.7",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
