--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroui/switch": "^2.2.26",
     "@heroui/system": "^2.4.25",
     "@heroui/theme": "^2.4.25",
+    "@hookform/resolvers": "^5.2.2",
     "@react-aria/ssr": "3.9.10",
     "@react-aria/visually-hidden": "3.8.29",
     "@reduxjs/toolkit": "^2.11.2",
@@ -30,8 +31,10 @@
     "next-themes": "0.4.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "^7.71.1",
     "react-redux": "^9.2.0",
-    "swiper": "^12.0.3"
+    "swiper": "^12.0.3",
+    "zod": "^4.3.6"
   },
   "devDependencies": {
     "@eslint/compat": "^2.0.1",
