--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "clsx": "2.1.1",
+    "cookies-next": "^6.1.1",
     "framer-motion": "11.18.2",
     "intl-messageformat": "10.7.16",
     "js-cookie": "^3.0.5",
